# mario

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_NEW.md  SECURITY.md  config.py  docker-compose.yml  evaluate.py  mario.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  train_mario.py  utils.py  visualize.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependencies.yml
docs/: DOCKER.md  README.md
examples/: basic_training.py
scripts/: build.sh  run.sh  setup.sh
src/mario_rl/: __init__.py
src/mario_rl/agents/: __init__.py  mario_agent.py
src/mario_rl/cli/: __init__.py  evaluate.py  main.py  train.py  visualize.py
src/mario_rl/configs/: __init__.py  training_config.py
src/mario_rl/environments/: __init__.py  mario_env.py
src/mario_rl/utils/: __init__.py  logging_utils.py  plotting_utils.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_config.py  test_environment.py  test_integration.py  test_mario.py  test_performance.py  test_utils.py
training_scripts/: README.md  record_mario_video.py  train_mario_100k.py  train_mario_100k_simple.py  train_mario_10k_episodes.py  train_mario_extended.py  train_mario_fixed.py  train_mario_gpu_simple.py  train_mario_live_visual.py  train_mario_manual_render.py  train_mario_optimized.py  train_mario_optimized_fixed.py  train_mario_production.py  train_mario_visual.py
